# dlgcpp

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  COPYRIGHT  README.md
apps/demo/: CMakeLists.txt  demo.cpp  demo.h
apps/demo/advanced/: clock_demo.cpp  clock_demo.h  drawing_demo.cpp  drawing_demo.h  graph_demo.cpp  graph_demo.h  note_keeper_demo.cpp  note_keeper_demo.h  notes_demo.cpp  notes_demo.h  popup_menu_demo.cpp  popup_menu_demo.h
apps/demo/assets/win32/: demo.xml
apps/demo/controls/: button_demo.cpp  button_demo.h  checkbox_demo.cpp  checkbox_demo.h  combobox_demo.cpp  combobox_demo.h  custom_demo.cpp  custom_demo.h  image_demo.cpp  image_demo.h  label_demo.cpp  label_demo.h  listbox_demo.cpp  listbox_demo.h  listview_demo.cpp  listview_demo.h  optionbtn_demo.cpp  optionbtn_demo.h  progress_demo.cpp  progress_demo.h  slider_demo.cpp  slider_demo.h  tabs_demo.cpp  tabs_demo.h  textbox_demo.cpp  textbox_demo.h  toolbar_demo.cpp  toolbar_demo.h  trackbar_demo.cpp  trackbar_demo.h  treeview_demo.cpp  treeview_demo.h
apps/demo/dialogs/: about_demo.cpp  about_demo.h  dialog_demo.cpp  dialog_demo.h  file_demo.cpp  file_demo.h  folder_demo.cpp  folder_demo.h  message_demo.cpp  message_demo.h  property_demo.cpp  property_demo.h  splash_demo.cpp  splash_demo.h
apps/demo/win32/: demo.rc
include/: CMakeLists.txt
include/dlgcpp/: align.h  child.h  clipbrd.h  colors.h  control.h  defs.h  dialog.h  dlgcpp.h  drop.h  event.h  font.h  image.h  keys.h  menu.h  mouse.h  point.h  position.h  property.h  size.h
include/dlgcpp/controls/: button.h  checkbox.h  combobox.h  control.h  custom.h  image.h  label.h  listbox.h  listview.h  listview_col.h  option_btn.h  progress.h  slider.h  tab_item.h  tabs.h  textbox.h  toolbar.h  toolbar_item.h  trackbar.h  treeview.h  treeview_node.h
include/dlgcpp/dialogs/: about.h  dialog.h  file.h  folder.h  message.h  property.h  splash.h
include/dlgcpp/gfx/: context.h
include/dlgcpp/menus/: menu.h  menu_item.h
src/: CMakeLists.txt  child.h  control.cpp  control.h  control_p.h  defs.h  dialog.cpp  dialog.h  dialog_p.h  dlgcpp.h  event.cpp  event.h  utility.cpp  utility.h
src/controls/: button.cpp  button.h  checkbox.cpp  combobox.cpp  control.cpp  custom.cpp  custom.h  custom_p.h  image.cpp  image.h  image_p.h  label.cpp  label.h  label_p.h  listbox.cpp  listbox.h  listview.cpp  listview_col.cpp  option_btn.cpp  p_slider.cpp  p_slider.h  progress.cpp  slider.cpp  slider.h  tab_item.cpp  tabs.cpp  textbox.cpp  textbox_p.h  toolbar.cpp  toolbar_item.cpp  trackbar.cpp  treeview.cpp  treeview_node.cpp
src/dialogs/: about.cpp  about.h  about_p.h  dialog.cpp  file.cpp  file.h  file_p.h  folder.cpp  folder.h  folder_p.h  message.cpp  property.cpp  splash.cpp  splash.h  splash_p.h
src/gfx/: context.cpp
src/menus/: menu.cpp  menu_item.cpp
src/neutral/: event.cpp  point.cpp  position.cpp  size.cpp
src/win32/: CMakeLists.txt  control.cpp  control_p.h  dialog.cpp  dialog_p.h  dlgmsg.h  event.cpp  event_p.h  keys_p.h  menu.cpp  menu_p.h  message_p.h  utility.cpp  utility.h
src/win32/controls/: button.cpp  button_impl.cpp  button_impl.h  button_p.h  checkbox.cpp  checkbox_impl.cpp  checkbox_impl.h  checkbox_p.h  combobox.cpp  combobox_impl.cpp  combobox_impl.h  combobox_p.h  control.cpp  control_impl.cpp  control_impl.h  control_p.h  custom.cpp  custom_impl.cpp  custom_impl.h  custom_p.h  image.cpp  image_impl.cpp  image_impl.h  image_p.h  label.cpp  label_impl.cpp  label_impl.h  label_p.h  listbox.cpp  listbox_impl.cpp  listbox_impl.h  listbox_p.h  listview.cpp  listview_col.cpp  listview_impl.cpp  listview_impl.h  listview_p.h  option_btn.cpp  option_btn_impl.cpp  option_btn_impl.h  (+34 more)
src/win32/dialogs/: about.cpp  about_impl.cpp  about_impl.h  about_p.h  dialog.cpp  dialog_impl.cpp  dialog_impl.h  dialog_p.h  file.cpp  file_impl.cpp  file_impl.h  file_p.h  folder.cpp  folder_impl.cpp  folder_impl.h  folder_p.h  message.cpp  message_impl.cpp  message_impl.h  message_p.h  property.cpp  property_impl.cpp  property_impl.h  property_p.h  splash.cpp  splash_impl.cpp  splash_impl.h  splash_p.h
src/win32/gfx/: context.cpp  context.h  context_impl.cpp  context_impl.h
src/win32/menus/: menu.cpp  menu_impl.cpp  menu_impl.h  menu_item.cpp  menu_item_impl.cpp  menu_item_impl.h  menu_item_p.h  menu_p.h
src/win32/utility/: convert.cpp  convert.h  font.cpp  font.h  font_loader.cpp  font_loader.h  image.cpp  image.h  image_reader.cpp  image_reader.h  key_mapper.cpp  key_mapper.h  keys.cpp  keys.h  message.cpp  message.h  string.cpp  string.h  string_encoder.cpp  string_encoder.h  units.cpp  units.h
tests/: CMakeLists.txt  point_tests.cpp  point_tests.h  position_tests.cpp  position_tests.h  size_tests.cpp  size_tests.h  unit_test.cpp  unit_test.h
tests/controls/: button_tests.cpp  button_tests.h  checkbox_tests.cpp  checkbox_tests.h  combobox_tests.cpp  combobox_tests.h  control_tests.cpp  control_tests.h  custom_tests.cpp  custom_tests.h  image_tests.cpp  image_tests.h  label_tests.cpp  label_tests.h  listbox_tests.cpp  listbox_tests.h  listview_col_tests.cpp  listview_col_tests.h  listview_tests.cpp  listview_tests.h  option_btn_tests.cpp  option_btn_tests.h  progress_tests.cpp  progress_tests.h  slider_tests.cpp  slider_tests.h  tab_item_tests.cpp  tab_item_tests.h  tabs_tests.cpp  tabs_tests.h  textbox_tests.cpp  textbox_tests.h  toolbar_item_tests.cpp  toolbar_item_tests.h  toolbar_tests.cpp  toolbar_tests.h  trackbar_tests.cpp  trackbar_tests.h  treeview_node_tests.cpp  treeview_node_tests.h  (+2 more)
tests/dialogs/: dialog_tests.cpp  dialog_tests.h
tests/menus/: menu_item_tests.cpp  menu_item_tests.h  menu_tests.cpp  menu_tests.h
tests/mocks/: fake_control.h  fake_dialog.h  mock_control.h  mock_dialog.h  mock_event.h  mock_menu.h  mock_property.h  mocks.h
tests/utility/: event_tests.cpp  event_tests.h  property_tests.cpp  property_tests.h
tests/win32/: CMakeLists.txt
tests/win32/dialogs/: dialog_impl_tests.cpp  dialog_impl_tests.h  dialog_tests.cpp  dialog_tests.h
tests/win32/utility/: convert_tests.cpp  convert_tests.h
(+4 files in other folders)
